--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/express": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "p5": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/p5": "^1.7.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
