--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "p5": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-p5-wrapper": "^4.1.2",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
