--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@emailjs/browser": "^4.4.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/uuid": "^10.0.0",
+    "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "p5": "^2.0.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-p5-wrapper": "^4.1.2",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
